qt/gen_qevent.h

class QEnterEvent;
class QInputEvent;
typedef QInputMethodEvent::Attribute QInputMethodEvent__Attribute;
class QMouseEvent;
class QPoint;
class QPointF;
typedef QTouchEvent::TouchPoint QTouchEvent__TouchPoint;
typedef struct QApplicationStateChangeEvent QApplicationStateChangeEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QInputEvent QInputEvent;
typedef struct QInputMethodEvent__Attribute QInputMethodEvent__Attribute;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QPointingDeviceUniqueId QPointingDeviceUniqueId;
typedef struct QRectF QRectF;
typedef struct QScreen QScreen;
typedef struct QScreenOrientationChangeEvent QScreenOrientationChangeEvent;
typedef struct QSizeF QSizeF;
typedef struct QTouchEvent__TouchPoint QTouchEvent__TouchPoint;
typedef struct QVariant QVariant;
typedef struct QVector2D QVector2D;
QScreen* QScreenOrientationChangeEvent_screen(const QScreenOrientationChangeEvent* self);
int QScreenOrientationChangeEvent_orientation(const QScreenOrientationChangeEvent* self);
void QScreenOrientationChangeEvent_delete(QScreenOrientationChangeEvent* self);
QApplicationStateChangeEvent* QApplicationStateChangeEvent_new(int state);
QApplicationStateChangeEvent* QApplicationStateChangeEvent_new2(QApplicationStateChangeEvent* param1);
int QApplicationStateChangeEvent_applicationState(const QApplicationStateChangeEvent* self);
void QApplicationStateChangeEvent_delete(QApplicationStateChangeEvent* self);
QInputMethodEvent__Attribute* QInputMethodEvent__Attribute_new(int typ, int s, int l, QVariant* val);
QInputMethodEvent__Attribute* QInputMethodEvent__Attribute_new2(int typ, int s, int l);
QInputMethodEvent__Attribute* QInputMethodEvent__Attribute_new3(QInputMethodEvent__Attribute* param1);
void QInputMethodEvent__Attribute_operatorAssign(QInputMethodEvent__Attribute* self, QInputMethodEvent__Attribute* param1);
void QInputMethodEvent__Attribute_delete(QInputMethodEvent__Attribute* self);
QTouchEvent__TouchPoint* QTouchEvent__TouchPoint_new();
QTouchEvent__TouchPoint* QTouchEvent__TouchPoint_new2(QTouchEvent__TouchPoint* other);
QTouchEvent__TouchPoint* QTouchEvent__TouchPoint_new3(int id);
void QTouchEvent__TouchPoint_operatorAssign(QTouchEvent__TouchPoint* self, QTouchEvent__TouchPoint* other);
void QTouchEvent__TouchPoint_swap(QTouchEvent__TouchPoint* self, QTouchEvent__TouchPoint* other);
int QTouchEvent__TouchPoint_id(const QTouchEvent__TouchPoint* self);
QPointingDeviceUniqueId* QTouchEvent__TouchPoint_uniqueId(const QTouchEvent__TouchPoint* self);
int QTouchEvent__TouchPoint_state(const QTouchEvent__TouchPoint* self);
QPointF* QTouchEvent__TouchPoint_pos(const QTouchEvent__TouchPoint* self);
QPointF* QTouchEvent__TouchPoint_startPos(const QTouchEvent__TouchPoint* self);
QPointF* QTouchEvent__TouchPoint_lastPos(const QTouchEvent__TouchPoint* self);
QPointF* QTouchEvent__TouchPoint_scenePos(const QTouchEvent__TouchPoint* self);
QPointF* QTouchEvent__TouchPoint_startScenePos(const QTouchEvent__TouchPoint* self);
QPointF* QTouchEvent__TouchPoint_lastScenePos(const QTouchEvent__TouchPoint* self);
QPointF* QTouchEvent__TouchPoint_screenPos(const QTouchEvent__TouchPoint* self);
QPointF* QTouchEvent__TouchPoint_startScreenPos(const QTouchEvent__TouchPoint* self);
QPointF* QTouchEvent__TouchPoint_lastScreenPos(const QTouchEvent__TouchPoint* self);
QPointF* QTouchEvent__TouchPoint_normalizedPos(const QTouchEvent__TouchPoint* self);
QPointF* QTouchEvent__TouchPoint_startNormalizedPos(const QTouchEvent__TouchPoint* self);
QPointF* QTouchEvent__TouchPoint_lastNormalizedPos(const QTouchEvent__TouchPoint* self);
QRectF* QTouchEvent__TouchPoint_rect(const QTouchEvent__TouchPoint* self);
QRectF* QTouchEvent__TouchPoint_sceneRect(const QTouchEvent__TouchPoint* self);
QRectF* QTouchEvent__TouchPoint_screenRect(const QTouchEvent__TouchPoint* self);
void QTouchEvent__TouchPoint_setRect(QTouchEvent__TouchPoint* self, QRectF* rect);
void QTouchEvent__TouchPoint_setSceneRect(QTouchEvent__TouchPoint* self, QRectF* sceneRect);
void QTouchEvent__TouchPoint_setScreenRect(QTouchEvent__TouchPoint* self, QRectF* screenRect);
double QTouchEvent__TouchPoint_pressure(const QTouchEvent__TouchPoint* self);
double QTouchEvent__TouchPoint_rotation(const QTouchEvent__TouchPoint* self);
QSizeF* QTouchEvent__TouchPoint_ellipseDiameters(const QTouchEvent__TouchPoint* self);
QVector2D* QTouchEvent__TouchPoint_velocity(const QTouchEvent__TouchPoint* self);
int QTouchEvent__TouchPoint_flags(const QTouchEvent__TouchPoint* self);
struct miqt_array /* of QPointF* */  QTouchEvent__TouchPoint_rawScreenPositions(const QTouchEvent__TouchPoint* self);
void QTouchEvent__TouchPoint_setId(QTouchEvent__TouchPoint* self, int id);
void QTouchEvent__TouchPoint_setUniqueId(QTouchEvent__TouchPoint* self, long long uid);
void QTouchEvent__TouchPoint_setState(QTouchEvent__TouchPoint* self, int state);
void QTouchEvent__TouchPoint_setPos(QTouchEvent__TouchPoint* self, QPointF* pos);
void QTouchEvent__TouchPoint_setScenePos(QTouchEvent__TouchPoint* self, QPointF* scenePos);
void QTouchEvent__TouchPoint_setScreenPos(QTouchEvent__TouchPoint* self, QPointF* screenPos);
void QTouchEvent__TouchPoint_setNormalizedPos(QTouchEvent__TouchPoint* self, QPointF* normalizedPos);
void QTouchEvent__TouchPoint_setStartPos(QTouchEvent__TouchPoint* self, QPointF* startPos);
void QTouchEvent__TouchPoint_setStartScenePos(QTouchEvent__TouchPoint* self, QPointF* startScenePos);
void QTouchEvent__TouchPoint_setStartScreenPos(QTouchEvent__TouchPoint* self, QPointF* startScreenPos);
void QTouchEvent__TouchPoint_setStartNormalizedPos(QTouchEvent__TouchPoint* self, QPointF* startNormalizedPos);
void QTouchEvent__TouchPoint_setLastPos(QTouchEvent__TouchPoint* self, QPointF* lastPos);
void QTouchEvent__TouchPoint_setLastScenePos(QTouchEvent__TouchPoint* self, QPointF* lastScenePos);
void QTouchEvent__TouchPoint_setLastScreenPos(QTouchEvent__TouchPoint* self, QPointF* lastScreenPos);
void QTouchEvent__TouchPoint_setLastNormalizedPos(QTouchEvent__TouchPoint* self, QPointF* lastNormalizedPos);
void QTouchEvent__TouchPoint_setPressure(QTouchEvent__TouchPoint* self, double pressure);
void QTouchEvent__TouchPoint_setRotation(QTouchEvent__TouchPoint* self, double angle);
void QTouchEvent__TouchPoint_setEllipseDiameters(QTouchEvent__TouchPoint* self, QSizeF* dia);
void QTouchEvent__TouchPoint_setVelocity(QTouchEvent__TouchPoint* self, QVector2D* v);
void QTouchEvent__TouchPoint_setFlags(QTouchEvent__TouchPoint* self, int flags);
void QTouchEvent__TouchPoint_setRawScreenPositions(QTouchEvent__TouchPoint* self, struct miqt_array /* of QPointF* */  positions);
void QTouchEvent__TouchPoint_delete(QTouchEvent__TouchPoint* self);