qt/gen_qevent.nim

proc fcQScreenOrientationChangeEvent_screen(self: pointer, ): pointer {.importc: "QScreenOrientationChangeEvent_screen".}
proc fcQScreenOrientationChangeEvent_orientation(self: pointer, ): cint {.importc: "QScreenOrientationChangeEvent_orientation".}
proc fcQScreenOrientationChangeEvent_delete(self: pointer) {.importc: "QScreenOrientationChangeEvent_delete".}
proc fcQApplicationStateChangeEvent_new(state: cint): ptr cQApplicationStateChangeEvent {.importc: "QApplicationStateChangeEvent_new".}
proc fcQApplicationStateChangeEvent_new2(param1: pointer): ptr cQApplicationStateChangeEvent {.importc: "QApplicationStateChangeEvent_new2".}
proc fcQApplicationStateChangeEvent_applicationState(self: pointer, ): cint {.importc: "QApplicationStateChangeEvent_applicationState".}
proc fcQApplicationStateChangeEvent_delete(self: pointer) {.importc: "QApplicationStateChangeEvent_delete".}
proc fcQInputMethodEventAttribute_new(typ: cint, s: cint, l: cint, val: pointer): ptr cQInputMethodEventAttribute {.importc: "QInputMethodEvent__Attribute_new".}
proc fcQInputMethodEventAttribute_new2(typ: cint, s: cint, l: cint): ptr cQInputMethodEventAttribute {.importc: "QInputMethodEvent__Attribute_new2".}
proc fcQInputMethodEventAttribute_new3(param1: pointer): ptr cQInputMethodEventAttribute {.importc: "QInputMethodEvent__Attribute_new3".}
proc fcQInputMethodEventAttribute_operatorAssign(self: pointer, param1: pointer): void {.importc: "QInputMethodEvent__Attribute_operatorAssign".}
proc fcQInputMethodEventAttribute_delete(self: pointer) {.importc: "QInputMethodEvent__Attribute_delete".}
proc fcQTouchEventTouchPoint_new(): ptr cQTouchEventTouchPoint {.importc: "QTouchEvent__TouchPoint_new".}
proc fcQTouchEventTouchPoint_new2(other: pointer): ptr cQTouchEventTouchPoint {.importc: "QTouchEvent__TouchPoint_new2".}
proc fcQTouchEventTouchPoint_new3(id: cint): ptr cQTouchEventTouchPoint {.importc: "QTouchEvent__TouchPoint_new3".}
proc fcQTouchEventTouchPoint_operatorAssign(self: pointer, other: pointer): void {.importc: "QTouchEvent__TouchPoint_operatorAssign".}
proc fcQTouchEventTouchPoint_swap(self: pointer, other: pointer): void {.importc: "QTouchEvent__TouchPoint_swap".}
proc fcQTouchEventTouchPoint_id(self: pointer, ): cint {.importc: "QTouchEvent__TouchPoint_id".}
proc fcQTouchEventTouchPoint_uniqueId(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_uniqueId".}
proc fcQTouchEventTouchPoint_state(self: pointer, ): cint {.importc: "QTouchEvent__TouchPoint_state".}
proc fcQTouchEventTouchPoint_pos(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_pos".}
proc fcQTouchEventTouchPoint_startPos(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_startPos".}
proc fcQTouchEventTouchPoint_lastPos(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_lastPos".}
proc fcQTouchEventTouchPoint_scenePos(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_scenePos".}
proc fcQTouchEventTouchPoint_startScenePos(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_startScenePos".}
proc fcQTouchEventTouchPoint_lastScenePos(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_lastScenePos".}
proc fcQTouchEventTouchPoint_screenPos(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_screenPos".}
proc fcQTouchEventTouchPoint_startScreenPos(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_startScreenPos".}
proc fcQTouchEventTouchPoint_lastScreenPos(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_lastScreenPos".}
proc fcQTouchEventTouchPoint_normalizedPos(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_normalizedPos".}
proc fcQTouchEventTouchPoint_startNormalizedPos(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_startNormalizedPos".}
proc fcQTouchEventTouchPoint_lastNormalizedPos(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_lastNormalizedPos".}
proc fcQTouchEventTouchPoint_rect(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_rect".}
proc fcQTouchEventTouchPoint_sceneRect(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_sceneRect".}
proc fcQTouchEventTouchPoint_screenRect(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_screenRect".}
proc fcQTouchEventTouchPoint_setRect(self: pointer, rect: pointer): void {.importc: "QTouchEvent__TouchPoint_setRect".}
proc fcQTouchEventTouchPoint_setSceneRect(self: pointer, sceneRect: pointer): void {.importc: "QTouchEvent__TouchPoint_setSceneRect".}
proc fcQTouchEventTouchPoint_setScreenRect(self: pointer, screenRect: pointer): void {.importc: "QTouchEvent__TouchPoint_setScreenRect".}
proc fcQTouchEventTouchPoint_pressure(self: pointer, ): float64 {.importc: "QTouchEvent__TouchPoint_pressure".}
proc fcQTouchEventTouchPoint_rotation(self: pointer, ): float64 {.importc: "QTouchEvent__TouchPoint_rotation".}
proc fcQTouchEventTouchPoint_ellipseDiameters(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_ellipseDiameters".}
proc fcQTouchEventTouchPoint_velocity(self: pointer, ): pointer {.importc: "QTouchEvent__TouchPoint_velocity".}
proc fcQTouchEventTouchPoint_flags(self: pointer, ): cint {.importc: "QTouchEvent__TouchPoint_flags".}
proc fcQTouchEventTouchPoint_rawScreenPositions(self: pointer, ): struct_miqt_array {.importc: "QTouchEvent__TouchPoint_rawScreenPositions".}
proc fcQTouchEventTouchPoint_setId(self: pointer, id: cint): void {.importc: "QTouchEvent__TouchPoint_setId".}
proc fcQTouchEventTouchPoint_setUniqueId(self: pointer, uid: clonglong): void {.importc: "QTouchEvent__TouchPoint_setUniqueId".}
proc fcQTouchEventTouchPoint_setState(self: pointer, state: cint): void {.importc: "QTouchEvent__TouchPoint_setState".}
proc fcQTouchEventTouchPoint_setPos(self: pointer, pos: pointer): void {.importc: "QTouchEvent__TouchPoint_setPos".}
proc fcQTouchEventTouchPoint_setScenePos(self: pointer, scenePos: pointer): void {.importc: "QTouchEvent__TouchPoint_setScenePos".}
proc fcQTouchEventTouchPoint_setScreenPos(self: pointer, screenPos: pointer): void {.importc: "QTouchEvent__TouchPoint_setScreenPos".}
proc fcQTouchEventTouchPoint_setNormalizedPos(self: pointer, normalizedPos: pointer): void {.importc: "QTouchEvent__TouchPoint_setNormalizedPos".}
proc fcQTouchEventTouchPoint_setStartPos(self: pointer, startPos: pointer): void {.importc: "QTouchEvent__TouchPoint_setStartPos".}
proc fcQTouchEventTouchPoint_setStartScenePos(self: pointer, startScenePos: pointer): void {.importc: "QTouchEvent__TouchPoint_setStartScenePos".}
proc fcQTouchEventTouchPoint_setStartScreenPos(self: pointer, startScreenPos: pointer): void {.importc: "QTouchEvent__TouchPoint_setStartScreenPos".}
proc fcQTouchEventTouchPoint_setStartNormalizedPos(self: pointer, startNormalizedPos: pointer): void {.importc: "QTouchEvent__TouchPoint_setStartNormalizedPos".}
proc fcQTouchEventTouchPoint_setLastPos(self: pointer, lastPos: pointer): void {.importc: "QTouchEvent__TouchPoint_setLastPos".}
proc fcQTouchEventTouchPoint_setLastScenePos(self: pointer, lastScenePos: pointer): void {.importc: "QTouchEvent__TouchPoint_setLastScenePos".}
proc fcQTouchEventTouchPoint_setLastScreenPos(self: pointer, lastScreenPos: pointer): void {.importc: "QTouchEvent__TouchPoint_setLastScreenPos".}
proc fcQTouchEventTouchPoint_setLastNormalizedPos(self: pointer, lastNormalizedPos: pointer): void {.importc: "QTouchEvent__TouchPoint_setLastNormalizedPos".}
proc fcQTouchEventTouchPoint_setPressure(self: pointer, pressure: float64): void {.importc: "QTouchEvent__TouchPoint_setPressure".}
proc fcQTouchEventTouchPoint_setRotation(self: pointer, angle: float64): void {.importc: "QTouchEvent__TouchPoint_setRotation".}
proc fcQTouchEventTouchPoint_setEllipseDiameters(self: pointer, dia: pointer): void {.importc: "QTouchEvent__TouchPoint_setEllipseDiameters".}
proc fcQTouchEventTouchPoint_setVelocity(self: pointer, v: pointer): void {.importc: "QTouchEvent__TouchPoint_setVelocity".}
proc fcQTouchEventTouchPoint_setFlags(self: pointer, flags: cint): void {.importc: "QTouchEvent__TouchPoint_setFlags".}
proc fcQTouchEventTouchPoint_setRawScreenPositions(self: pointer, positions: struct_miqt_array): void {.importc: "QTouchEvent__TouchPoint_setRawScreenPositions".}
proc fcQTouchEventTouchPoint_delete(self: pointer) {.importc: "QTouchEvent__TouchPoint_delete".}


func init*(T: type QInputEvent, h: ptr cQInputEvent): QInputEvent =
  T(h: h)
proc create*(T: type QInputEvent, typeVal: gen_qcoreevent.QEventType): QInputEvent =

  QInputEvent.init(fcQInputEvent_new(cint(typeVal)))
proc create*(T: type QInputEvent, param1: QInputEvent): QInputEvent =

  QInputEvent.init(fcQInputEvent_new2(param1.h))
proc create*(T: type QInputEvent, typeVal: gen_qcoreevent.QEventType, modifiers: gen_qnamespace.KeyboardModifier): QInputEvent =

  QInputEvent.init(fcQInputEvent_new3(cint(typeVal), cint(modifiers)))
proc modifiers*(self: QInputEvent, ): gen_qnamespace.KeyboardModifier =

  gen_qnamespace.KeyboardModifier(fcQInputEvent_modifiers(self.h))

proc setModifiers*(self: QInputEvent, amodifiers: gen_qnamespace.KeyboardModifier): void =

  fcQInputEvent_setModifiers(self.h, cint(amodifiers))

proc timestamp*(self: QInputEvent, ): culong =

  fcQInputEvent_timestamp(self.h)

proc setTimestamp*(self: QInputEvent, atimestamp: culong): void =

  fcQInputEvent_setTimestamp(self.h, atimestamp)

proc delete*(self: QInputEvent) =
  fcQInputEvent_delete(self.h)

func init*(T: type QEnterEvent, h: ptr cQEnterEvent): QEnterEvent =
  T(h: h)
proc create*(T: type QEnterEvent, localPos: gen_qpoint.QPointF, windowPos: gen_qpoint.QPointF, screenPos: gen_qpoint.QPointF): QEnterEvent =

  QEnterEvent.init(fcQEnterEvent_new(localPos.h, windowPos.h, screenPos.h))
proc create*(T: type QEnterEvent, param1: QEnterEvent): QEnterEvent =

  QEnterEvent.init(fcQEnterEvent_new2(param1.h))
proc pos*(self: QEnterEvent, ): gen_qpoint.QPoint =

  gen_qpoint.QPoint(h: fcQEnterEvent_pos(self.h))

proc globalPos*(self: QEnterEvent, ): gen_qpoint.QPoint =

  gen_qpoint.QPoint(h: fcQEnterEvent_globalPos(self.h))

proc x*(self: QEnterEvent, ): cint =

  fcQEnterEvent_x(self.h)

proc y*(self: QEnterEvent, ): cint =

  fcQEnterEvent_y(self.h)

proc globalX*(self: QEnterEvent, ): cint =

  fcQEnterEvent_globalX(self.h)

proc globalY*(self: QEnterEvent, ): cint =

  fcQEnterEvent_globalY(self.h)

proc localPos*(self: QEnterEvent, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQEnterEvent_localPos(self.h))

proc windowPos*(self: QEnterEvent, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQEnterEvent_windowPos(self.h))

proc screenPos*(self: QEnterEvent, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQEnterEvent_screenPos(self.h))

proc delete*(self: QEnterEvent) =
  fcQEnterEvent_delete(self.h)

func init*(T: type QMouseEvent, h: ptr cQMouseEvent): QMouseEvent =
  T(h: h)
proc create*(T: type QMouseEvent, typeVal: gen_qcoreevent.QEventType, localPos: gen_qpoint.QPointF, button: gen_qnamespace.MouseButton, buttons: gen_qnamespace.MouseButton, modifiers: gen_qnamespace.KeyboardModifier): QMouseEvent =

  QMouseEvent.init(fcQMouseEvent_new(cint(typeVal), localPos.h, cint(button), cint(buttons), cint(modifiers)))
proc create*(T: type QMouseEvent, typeVal: gen_qcoreevent.QEventType, localPos: gen_qpoint.QPointF, screenPos: gen_qpoint.QPointF, button: gen_qnamespace.MouseButton, buttons: gen_qnamespace.MouseButton, modifiers: gen_qnamespace.KeyboardModifier): QMouseEvent =

  QMouseEvent.init(fcQMouseEvent_new2(cint(typeVal), localPos.h, screenPos.h, cint(button), cint(buttons), cint(modifiers)))
proc create*(T: type QMouseEvent, typeVal: gen_qcoreevent.QEventType, localPos: gen_qpoint.QPointF, windowPos: gen_qpoint.QPointF, screenPos: gen_qpoint.QPointF, button: gen_qnamespace.MouseButton, buttons: gen_qnamespace.MouseButton, modifiers: gen_qnamespace.KeyboardModifier): QMouseEvent =
